Fix spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ a:hover {
 
 #profile-card p {
   font-size: 1.5em;
-  margin: 10vh auto;
+  margin: 5% auto;
   width: 80%;
   text-align: left;
 }
@@ -52,6 +52,5 @@ a:hover {
 
 .big-row {
   min-height: 100vh;
-  max-height: 100vh;
   padding: 0;
 }
